# aoc2022python

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yaml  leaderboard.py  pyproject.toml
day1/: main.py  test.py
day10/: main.py  test.py
day11/: main.py  test.py  test_graph.dot
day13/: main.py  test.py
day14/: main.py  movie.py  test.py
day15/: main.py  test.py
day17/: main.py  test.py
day18/: main.py  test.py
day2/: main.py  test.py
day21/: main.py  test.py
day23/: main.py  test.py  wow.txt
day24/: main.py  test.py
day25/: main.py  test.py
day3/: main.py  test.py
day4/: main.py  test.py
day5/: main.py  test.py
day6/: main.py  test.py
day7/: main.py  test.py
day8/: main.py  test.py
day9/: main.py  test.py
template/: main.py  test.py
