[tool.poetry]
name = "aoc2022python"
version = "0.1.0"
description = ""
authors = ["luminescentglacier <luminescentglacier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pre-commit = "^2.20.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--ignore", "template"]
python_files = ["test.py"]

[tool.isort]
profile = "black"
