[tool.poetry]
name = "aoc2022python"
version = "0.1.0"
description = ""
authors = ["luminescentglacier <luminescentglacier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"
more-itertools = "^9.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pre-commit = "^2.20.0"
isort = "^5.10.1"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.2"
flake8-bugbear = "^22.12.6"
flake8-simplify = "^0.19.3"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
pillow = "^9.3.0"
tqdm = "^4.64.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--ignore", "template"]
python_files = ["test.py"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
ignore = [
    # black
    "E203",
    "W503",
    # aoc specific
    "E731",
    "E741",
    # replaced by bugbear
    "E501",
]
extend-select = ["B950"]
